@@ -1,6 +1,0 @@
-include pyem/src/c_numpy.pxd
-include pyem/src/c_python.pxd
-include Changelog
-include TODO
-include LICENSE.txt
-#exclude pyem/_c_densities.py
